[gd_scene load_steps=14 format=2]

[ext_resource path="res://Components/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Components/Player/Assets/Sprites/Run/1.png" type="Texture" id=2]
[ext_resource path="res://Components/Player/Assets/Sprites/Run/2.png" type="Texture" id=3]
[ext_resource path="res://Components/Player/Assets/Sprites/Run/3.png" type="Texture" id=4]
[ext_resource path="res://Components/Player/Assets/Sprites/Run/4.png" type="Texture" id=5]
[ext_resource path="res://Components/Player/Assets/Sprites/Run/5.png" type="Texture" id=6]
[ext_resource path="res://Components/Player/Assets/Sprites/Run/6.png" type="Texture" id=7]
[ext_resource path="res://Components/Player/Assets/Sprites/Run/7.png" type="Texture" id=8]
[ext_resource path="res://Components/Player/Assets/Sprites/Run/8.png" type="Texture" id=9]
[ext_resource path="res://Components/Player/Assets/Sprites/Jump.png" type="Texture" id=10]
[ext_resource path="res://Components/Player/Assets/Sprites/Still.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "Jump",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "Idle",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 5, 13 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -5, 0 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="RayCastCenter" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 18 )

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 5, 0 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="DialogAnchor" type="Position2D" parent="."]
position = Vector2( 6, -16 )

